--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -81,7 +81,7 @@
 
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13124.113100638993!2d-58.715843066992036!3d-34.67923584124082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc071bf460245%3A0x424234ba8aba3f2b!2sDistribuidora%20Roca!5e0!3m2!1ses-419!2sar!4v1642785191293!5m2!1ses-419!2sar"
-          width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" class="mapaSucursales"></iframe>
 
       </div>
 
@@ -101,7 +101,7 @@
 
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13124.011802632089!2d-58.707091!3d-34.679874999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc071dd2944f3%3A0xac3d60e4ac8e4819!2sferreteria%20roca!5e0!3m2!1ses-419!2sar!4v1642785675573!5m2!1ses-419!2sar"
-          width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" class="mapaSucursales"></iframe>
 
       </div>
 
