--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name=“keywords“ content=“ distribuidora, ferreteria, productos, herramientas, bulones”>
+  <meta name=“description“ content=“ Distribuidora Mayorista de Artículos para Ferreterías atención y Precio Especial a Revendedores y Mayoristas Entregamos en Todo el País Asesoramiento en Apertura de Nuevos Comercios”>
 
   <!-- Nombre del HTML -->
-  <title> Inicio - Roca </title>
+  <title> Distribuidora Roca </title>
 
   <!-- link bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
