--- a/pages/empresa.html
+++ b/pages/empresa.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name=“keywords“ content=“ distribuidora, ferreteria, productos, herramientas, bulones”>
+  <meta name=“description“ content=“ Distribuidora Mayorista de Artículos para Ferreterías atención y Precio Especial a Revendedores y Mayoristas Entregamos en Todo el País Asesoramiento en Apertura de Nuevos Comercios, informacion de la empresa y los servicios que proveemos.”>
   <title> Empresa - Roca </title>
 
   <!-- link bootstrap -->
