--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name=“keywords“ content=“ distribuidora, ferreteria, productos, herramientas, bulones”>
+  <meta name=“description“ content=“ Distribuidora Mayorista de Artículos para Ferreterías atención y Precio Especial a Revendedores y Mayoristas Entregamos en Todo el País Asesoramiento en Apertura de Nuevos Comercios, nos puede encontrar en las sucursales detalladas a continuacion. ”>
   <title> Sucursales - Roca </title>
 
   <!-- link bootstrap -->
