--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
           <div class="carousel-item active">
             <img src="img/ferreteria2.jpg" class="d-block img-fluid" id="medidaIndex2" alt="imagenProductos">
             <div class="carousel-caption d-none d-md-block">
-              <p class="textoIndex1">Distribuidora Roca</p>
-              <p class="textoIndex2">La mejor calidad de productos en el mercado ferretero.</p>
+              <h1 class="textoIndex1">Distribuidora Roca</h1>
+              <h3 class="textoIndex2">La mejor calidad de productos en el mercado ferretero.</h3>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/ferreteria1.jpg" class="d-block img-fluid" id="medidaIndex1" alt="imagenProductos">
             <div class="carousel-caption d-none d-md-block">
-              <p class="textoIndex1">Distribuidora Roca</p>
-              <p class="textoIndex2">Poseemos gran variedad de productos de la mejor calidad.</p>
+              <h2 class="textoIndex1">Distribuidora Roca</h2>
+              <h3 class="textoIndex2">Poseemos gran variedad de productos de la mejor calidad.</h3>
             </div>
           </div>
         </div>
