--- a/pages/productos.html
+++ b/pages/productos.html
@@ -80,31 +80,29 @@
 
       <!-- lista de precios -->
 
-      <div id="archivoProductos">
+        <div class="card card-productos">
+          <div class="card-body">
+            <p class="card-title tittle-productos">Listas de Precios</p>
+            <p class="card-text">Lista Roca Web 16-02-2022</p>
+            <a href="https://drive.google.com/drive/folders/1xRqa0zc0Cuy6Ly-O97p1WD58KxvLnkpm?usp=sharing" target="blank" class="btn btn-primary">Descargar</a>
+          </div>
+        </div>
+        
+        <div class="card card-productos">
+          <div class="card-body">
+            <h5 class="card-title tittle-productos">Modificaciones de Precios</h5>
+            <p class="card-text">Lista Roca cambios 07-02 al 16-02 del 2022</p>
+            <a href="https://drive.google.com/drive/folders/1xRqa0zc0Cuy6Ly-O97p1WD58KxvLnkpm?usp=sharing" target="blank" class="btn btn-primary">Descargar</a>
+          </div>
+        </div>
 
-        <a
-          href="https://docs.google.com/spreadsheets/d/16aGc2AtrLbwPBtwnhcEV_5yBXi90i_aV/edit?usp=drive_web&ouid=108489010116586184676&rtpof=true">
-          <img id="archivoImagen" target="_blank" src="../img/lista.png" alt=" lista de precios "></a>
-
-      </div>
-
-      <!-- catalogo -->
-
-      <div id="textoProductos">
-
-        <h1>Nuestro catálogo</h1>
-
-        <p> Proveemos mercadería de la mejor calidad del mercado por todo el gran Buenos Aires, la variedad de los productos la podés encontrar dentro de nuestro catálogo online. En la seccion de contacto tenes la informacion necesaria para proveerte nuestros productos o tambien asesorarte para la apertura de una ferreteria.</p>
-
-      </div>
-
-      <!-- nuestras marcas -->
-
-      <div id="marcasProductos">
-
-        <img id="imagenMarcas" src="../img/marcas.png" alt=" imagen de marca prueba">
-
-      </div>
+        <div class="card card-productos">
+          <div class="card-body">
+            <h5 class="card-title tittle-productos">Ultimas Incorporaciones</h5>
+            <p class="card-text">Articulos nuevos 16-02-2022</p>
+            <a href="https://drive.google.com/drive/folders/1xRqa0zc0Cuy6Ly-O97p1WD58KxvLnkpm?usp=sharing" target="blank" class="btn btn-primary">Descargar</a>
+          </div>
+        </div>
 
     </main>
 
