--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,7 +60,7 @@
               <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item agrandar">
-              <a class="nav-link" href="productos.html">Productos</a>
+              <a class="nav-link" href="catalogo.html">Catalogo</a>
             </li>
             <li class="nav-item agrandar">
               <a class="nav-link" href="empresa.html">Empresa</a>
@@ -172,49 +172,6 @@
       </form>
 
     </main>
-
-    <section class="mainContactoMobile">
-
-      <div class="tituloContacto">
-
-        <h1> Informacion de Contacto </h1>
-
-      </div>
-
-      <div class="parrafoContacto">
-
-        <p>
-          Ponete en contacto con nosotros, como hemos mencionado en otros apartados de la web te ofrecemos nuestro servicio de distribuicion (si es que tu ferreteria esta en Buenos Aires) y ademas brindamos atencion y asesoramiento en la apertura de ferreterias.
-        </p>
-
-      </div>
-
-      <div class="telefonoContacto">
-
-        <p> Teléfonos: 0220-482-2242 LINEAS ROTATIVAS </p>
-
-      </div>
-
-      <div class="ventasContacto">
-
-        <p> Ventas: roca@ferreteriaroca.com </p>
-
-      </div>
-
-      <div class="domicilioContacto">
-
-        <p> Domicilio: Ayacucho 1139 </p>
-
-      </div>
-
-      <div class="redesContacto">
-
-        <a href="https://www.instagram.com/distribuidora.roca/?hl=es" target="_blank" class="redesCaja"> <img
-            src="../img/ig.png" alt="logo instagram"></a>
-
-      </div>
-
-    </section>
 
     <footer>
 
