--- a/pages/empresa.html
+++ b/pages/empresa.html
@@ -53,7 +53,7 @@
               <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item agrandar">
-              <a class="nav-link" href="productos.html">Productos</a>
+              <a class="nav-link" href="catalogo.html">Catalogo</a>
             </li>
             <li class="nav-item agrandar">
               <a class="nav-link" href="empresa.html">Empresa</a>
