--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <a class="nav-link" href="index.html">Inicio</a>
             </li>
             <li class="nav-item agrandar">
-              <a class="nav-link" href="pages/productos.html">Productos</a>
+              <a class="nav-link" href="pages/catalogo.html">Catalogo</a>
             </li>
             <li class="nav-item agrandar">
               <a class="nav-link" href="pages/empresa.html">Empresa</a>
