--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name=“keywords“ content=“ distribuidora, ferreteria, productos, herramientas, bulones”>
   <meta name=“description“ content=“ Distribuidora Mayorista de Artículos para Ferreterías atención y Precio Especial a Revendedores y Mayoristas Entregamos en Todo el País Asesoramiento en Apertura de Nuevos Comercios, aqui encontrara nuestro catalogo con la variedad de nuestros articulos disponibles para la venta.”>
-  <title> Productos - Roca </title>
+  <title> catalogo - Roca </title>
 
   <!-- link bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -60,7 +60,7 @@
               <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item agrandar">
-              <a class="nav-link" href="productos.html">Productos</a>
+              <a class="nav-link" href="catalogo.html">Catalogo</a>
             </li>
             <li class="nav-item agrandar">
               <a class="nav-link" href="empresa.html">Empresa</a>
@@ -83,24 +83,24 @@
         <div class="card card-productos">
           <div class="card-body">
             <p class="card-title tittle-productos">Listas de Precios</p>
-            <p class="card-text">Lista Roca Web 16-02-2022</p>
-            <a href="https://drive.google.com/drive/folders/1xRqa0zc0Cuy6Ly-O97p1WD58KxvLnkpm?usp=sharing" target="blank" class="btn btn-primary">Descargar</a>
+            <p class="card-text text-productos">Lista Roca Web 16-02-2022</p>
+            <a href="https://drive.google.com/drive/folders/1xRqa0zc0Cuy6Ly-O97p1WD58KxvLnkpm?usp=sharing" target="blank" class="btn btn-primary">Acceder</a>
           </div>
         </div>
         
         <div class="card card-productos">
           <div class="card-body">
             <h5 class="card-title tittle-productos">Modificaciones de Precios</h5>
-            <p class="card-text">Lista Roca cambios 07-02 al 16-02 del 2022</p>
-            <a href="https://drive.google.com/drive/folders/1xRqa0zc0Cuy6Ly-O97p1WD58KxvLnkpm?usp=sharing" target="blank" class="btn btn-primary">Descargar</a>
+            <p class="card-text text-productos">Lista Roca cambios 07-02 al 16-02 del 2022</p>
+            <a href="https://drive.google.com/drive/folders/1xRqa0zc0Cuy6Ly-O97p1WD58KxvLnkpm?usp=sharing" target="blank" class="btn btn-primary">Acceder</a>
           </div>
         </div>
 
         <div class="card card-productos">
           <div class="card-body">
             <h5 class="card-title tittle-productos">Ultimas Incorporaciones</h5>
-            <p class="card-text">Articulos nuevos 16-02-2022</p>
-            <a href="https://drive.google.com/drive/folders/1xRqa0zc0Cuy6Ly-O97p1WD58KxvLnkpm?usp=sharing" target="blank" class="btn btn-primary">Descargar</a>
+            <p class="card-text text-productos">Articulos nuevos 16-02-2022</p>
+            <a href="https://drive.google.com/drive/folders/1xRqa0zc0Cuy6Ly-O97p1WD58KxvLnkpm?usp=sharing" target="blank" class="btn btn-primary">Acceder</a>
           </div>
         </div>
 
