--- a/pages/empresa.html
+++ b/pages/empresa.html
@@ -71,7 +71,7 @@
 
     <main class="mainEmpresa">
 
-      <img src="../img/ferreteria1.jpg" alt="imagen de ferreteria" id="imagenEmpresa">
+      <img src="../img/local.png" alt="imagen de ferreteria" id="imagenEmpresa">
 
       <div class="containerEmpresa">
 
